feat: adding structural changes
